--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,6 +8,10 @@
         <%= render 'shared/post_form' %>
       </section>
     </aside>
+    <div class="col-md-8">
+      <h3>Post Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
   </div>
 <% else %>
 <div class="center jumbotron">
@@ -18,7 +22,7 @@
     <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
     sample application.
   </h2>
-  
+
  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
