--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -1,7 +1,8 @@
-<%= form_for(@post) do |f| %>
+<%= form_for(@post, html: { multipart: true }) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
     <%= f.text_area :content, placeholder: "Compose new post..." %>
   </div>
   <%= f.submit "Post", class: "btn btn-primary" %>
+  　<%= f.file_field :picture %>
 <% end %>
