--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,12 @@
     The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
     by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
   </small>
+  
   <nav>
+    <div class="btn-group" role="group" aria-label="...">
+  　　　<button type="button" class="btn btn-default">English</button>
+  　　 <button type="button" class="btn btn-default">日本語</button>
+  　</div>
     <ul>
       <li><%= link_to "About",   about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
