--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -288,3 +288,52 @@ span.picture {
     border: 0;
   }
 }
+
+/*
+ * イメージを丸型に。参考サイト；http://www.nishishi.com/css/trim-image-to-circle.html
+ */
+
+
+
+
+
+
+/*http://photoshopvip.net/91115のButton Shadowより
+ボタンbuttonはbutton1に名前変えています。*/
+/* Links */
+html, body {
+  height: 100%;
+}
+
+
+.wrap {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.button1 {
+  width: 250px;
+  height: 45px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  }
+.button1:hover {
+  background-color: #2EE59D;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
