--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -35,8 +35,10 @@
         <p>Want to become a stylist? <a href="#">3 steps</a>
           <br> more info here<a href="#"> Docs</a></p>
       </div>
-        <%= link_to image_tag("rails.png", alt: "Rails logo"),
+
+        <%= link_to image_tag("rails.png", :size => "30x30", alt: "Rails logo"),
         'http://rubyonrails.org/' %>
+
     </div>
  </div>
 <% end %>
