--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -341,3 +341,205 @@ html, body {
   color: #fff;
   transform: translateY(-7px);
 }
+
+
+// priceリスト。
+
+.flexbox {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+}
+
+/*
+TABLE
+================================================ */
+table {
+    width: 100%;
+    border-bottom: 1px solid #ddd;
+    width: 100%;
+    margin-bottom: 15px;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    border: 1px solid #ddd;
+    -webkit-overflow-scrolling: touch;
+}
+th, td {
+    padding: 15px;
+  text-align: center;
+    vertical-align: top;
+    border-top: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+}
+tr:nth-child(even)>td,
+tr:nth-child(even)>th {
+    background-color: #efefef;
+}
+th,
+.plan-price {
+    color: #fff;
+}
+.plan-price {
+    font-size: 2.5rem;
+  border-top: 1px solid rgba(255,255,255,.2);
+  padding: 25px 0;
+}
+.plan-price span {
+    font-size: 1rem;
+}
+
+/* Background colour */
+.plan-free th,
+.plan-free .plan-price {
+    background: linear-gradient(-90deg, #009ADB, #00DB9A);
+}
+.plan-premium th,
+.plan-premium .plan-price {
+    background: linear-gradient(-90deg, #EE52FF, #009ADB);
+}
+
+/*
+LARGE DISPLAY
+================================================ */
+@media ( min-width : 700px ){
+    .flexbox {
+        -webkit-flex-direction: row;
+        flex-direction: row;
+    }
+  .plan-table {
+    margin-left: 3%;
+  }
+  .plan-table:first-of-type {
+    margin-left: 0;
+  }
+}
+
+//ボタン3
+/* Mixins */
+@mixin gradientBg($startColor, $endColor) {
+    background: $startColor;
+    background: -moz-linear-gradient(left,  $startColor 0%, $endColor 80%,$endColor 100%);
+    background: -webkit-linear-gradient(left,  $startColor 0%, $endColor 80%,$endColor 100%);
+    background: linear-gradient(to right,  $startColor 0%, $endColor 80%,$endColor 100%);
+}
+
+/* bg shortcodes */
+.bg-gradient1 span,
+.bg-gradient1:before {
+    @include gradientBg(#52A0FD, #00e2fa);
+}
+.bg-gradient2 span,
+.bg-gradient2:before {
+    @include gradientBg(#44ea76, #39fad7);
+}
+.bg-gradient3 span,
+.bg-gradient3:before {
+    @include gradientBg(#fa6c9f, #ffe140);
+}
+
+/* General */
+.wrapper {
+    margin: 5% auto;
+    text-align: center;
+}
+a {
+    text-decoration: none;
+
+    &:hover,
+    &:focus,
+    &:active {
+      text-decoration: none;
+  }
+}
+
+/* fancy Button */
+.fancy-button {
+    display: inline-block;
+    margin: 30px;
+    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+    font-size: 17px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
+    position: relative;
+
+    &:before {
+        content: '';
+        display: inline-block;
+        height: 40px;
+        position: absolute;
+        bottom: -5px;
+        left: 30px;
+        right: 30px;
+        z-index: -1;
+        border-radius: 30em;
+        filter: blur(20px) brightness(0.95);
+        transform-style: preserve-3d;
+        transition: all 0.3s ease-out;
+    }
+    i {
+        margin-top: -1px;
+        margin-right: 20px;
+        font-size: 1.265em;
+        vertical-align: middle;
+    }
+    span {
+        display: inline-block;
+        padding: 18px 60px;
+        border-radius: 50em;
+        position: relative;
+        z-index: 2;
+        will-change: transform, filter;
+        transform-style: preserve-3d;
+        transition: all 0.3s ease-out;
+    }
+    &:focus,
+    &:active {
+        color: #ffffff;
+    }
+    &:hover {
+        color: #ffffff;
+
+        span {
+            filter: brightness(1.05) contrast(1.05);
+            transform: scale(0.95);
+        }
+        &:before {
+            bottom: 0;
+            filter: blur(10px) brightness(0.95);
+        }
+    }
+    &.pop-onhover {
+
+        &:before {
+            opacity: 0;
+            bottom: 10px;
+        }
+        &:hover {
+
+            &:before {
+                bottom: -7px;
+                opacity: 1;
+                filter: blur(20px);
+            }
+            span {
+                transform: scale(1.04);
+            }
+            &:active {
+
+                span {
+                    filter: brightness(1) contrast(1);
+                    transform: scale(1);
+                    transition: all 0.15s ease-out;
+                }
+                &:before {
+                    bottom: 0;
+                    filter: blur(10px) brightness(0.95);
+                    transition: all 0.2s ease-out;
+                }
+            }
+        }
+    }
+}
