--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,4 +1,9 @@
-<%= link_to gravatar_for(current_user, size: 50), current_user %>
-<h1><%= current_user.name %></h1>
-<span><%= link_to "view my profile", current_user %></span>
-<span><%= pluralize(current_user.posts.count, "post") %></span>
+<div class="card">
+  <img class="card-img-top" src="..." alt="Card image cap">
+  <%= link_to gravatar_for(current_user, size: 50), current_user %>
+  <div class="card-block">
+    <h4 class="card-title"><%= current_user.name %></h4>
+    <p class="card-text"><%= link_to "view my profile", current_user %></p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
