フォントをかえた。

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -73,6 +73,7 @@ aside {
     }
     h1 {
       font-size: 1.4em;
+      font-family: 'Roboto', sans-serif;
       text-align: left;
       letter-spacing: -1px;
       margin-bottom: 3px;
@@ -565,7 +566,9 @@ a {
 }
 .intro .intro-body .brand-heading {
   font-size: 40px;
+  font-family: 'Roboto', sans-serif;
 }
 .intro .intro-body .intro-text {
   font-size: 18px;
+  font-family: 'Roboto', sans-serif;
 }
