--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,3 @@
-
 <!-- Navigation -->
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
   <div class="container">
@@ -9,12 +8,11 @@
       </button>
       <%= link_to "Stylatte", root_path, id: "logo" %>
     </div>
-
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li class="hidden">
-         <a href="#page-top"></a>
+          <a href="#page-top"></a>
         </li>
         <li class="page-scroll">
           <li><%= link_to "Home", root_path %></li>
@@ -22,26 +20,23 @@
         </li>
         <li class="page-scroll">
           <% if logged_in? %>
-           <div class="btn-group">
-             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+          <div class="btn-group">
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
               <%= link_to current_user.name, users_path %> <span class="caret"></span>
-             </button>
-                <ul class="dropdown-menu" role="menu">
-                  <li><%= link_to "Profile", current_user %></li>
-                  <li><%= link_to "Settings", edit_user_path(current_user) %></li>
-                  <li class="divider"></li>
-                  <li><%= link_to "Log out", logout_path, method: "delete" %></li>
-                </ul>
-           </div>
+            </button>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+              <li class="divider"></li>
+              <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+            </ul>
+          </div>
           <% else %>
-           <%= link_to "Log in", login_path %>
+          <%= link_to "Log in", login_path %>
           <% end %>
         </li>
       </ul>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-
-    </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"></div>
     </div>
     <!-- /.navbar-collapse -->
   </div>
