--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -85,7 +85,7 @@ aside {
 .gravatar {
   float: left;
   margin-right: 10px;
-  border-radius: 50%; 
+  border-radius: 50%;
 }
 
 .gravatar_edit {
@@ -107,7 +107,7 @@ aside {
     }
     &:hover {
       text-decoration: none;
-      color: blue;
+      color: yellow;
     }
   }
   strong {
