--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,8 +25,7 @@
               <%= link_to current_user.name, users_path %> <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" role="menu">
-              <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+              <li><%= link_to "Edit profile", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li><%= link_to "Log out", logout_path, method: "delete" %></li>
             </ul>
