--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -7,6 +7,6 @@
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
   <p>
-    <%= link_to "Edit", current_user %>
+    <%= link_to "Edit profile", edit_user_path(current_user) %>
   </p>
 </div>
