--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,9 +17,11 @@
       <ul class="nav navbar-nav navbar-right">
 
         <li class="page-scroll">
+          <li><%= link_to "Styling", root_path %></li>
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Help", help_path %></li>
         </li>
+
 
         <li class="page-scroll">
           <% if logged_in? %>
