Material Iconをフォントで使えるようにCDNを<header>に入れ、CSSにコピペしてみた。

--- a/app/views/static_pages/price.html.erb
+++ b/app/views/static_pages/price.html.erb
@@ -54,5 +54,5 @@
       <a href="#" class="fancy-button pop-onhover bg-gradient1"><span>Post A Comment</span></a>
     </div>
   </div>
-
+<i class="material-icons">star-rate</i>
 </div>
