containerをcontainer-fluidにすると、タブレットサイズ(768px)以上で左右の余白が入らないということで変えたが、同じだった。

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -224,7 +224,7 @@ p {
     text-decoration: none;
   }
 }
-
+// home画面
 .intro {
   display: table;
   width: 100%;
@@ -247,6 +247,7 @@ p {
   font-size: 18px;
   font-family: 'Roboto', sans-serif;
 }
+
 /* footer */
 
 footer {
