--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,7 +20,7 @@
 <% else %>
 <header class="intro">
   <div class="intro-body">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <h1 class="cover-heading">Make your style new.</h1>
