--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,12 +1,5 @@
-<div class="card">
-  <div class="card-block">
-    <h4 class="card-title"><%= current_user.name %></h4>
-  </div>
+
+  <h4 class="card-title"><%= current_user.name %></h4>
   <%= link_to gravatar_for(current_user, size: 100), current_user %>
-  <div class="card-block">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-  <p>
-    <%= link_to "Edit profile", edit_user_path(current_user) %>
-  </p>
-</div>
+  <p class="card-text">Some quick example text t bulk of the card's content.</p>
+  <%= link_to "Edit profile", edit_user_path(current_user) %>
