--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -4,7 +4,7 @@
   </div>
   <%= link_to gravatar_for(current_user, size: 100), current_user %>
   <div class="card-block">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text"><%= current_user.appeal_message %></p>
   </div>
   <%= image_tag current_user.picture.url if current_user.picture? %>
   <p>
