--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -23,14 +23,27 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
+      <div class="form-group">
+        <label for="exampleSelect1">public?</label><br>
+        <label><%= f.radio_button :public, "public" %>public</label>
+        <label><%= f.radio_button :public, "private" %>private</label>
+      </div>
+
+      <div class="form-group">
+        <label for="exampleSelect1">company use?</label><br>
+        <label><%= f.radio_button :status, "usual" %>public</label>
+        <label><%= f.radio_button :status, "company" %>private</label>
+      </div>
+
       <%= f.label :country %>
       <%= f.text_field :country, class: 'form-control' %>
 
       <%= f.label :status %>
       <%= f.text_field :status, class: 'form-control' %>
 
-      <%= f.label :public %>
-      <%= f.text_field :public, class: 'form-control' %>
+
+      <%= f.label :body_size %>
+      <%= f.text_field :body_size, class: 'form-control' %>
 
       <%= f.label :sns %>
       <%= f.text_field :sns, class: 'form-control' %>
@@ -38,8 +51,6 @@
       <%= f.label :appeal_message %>
       <%= f.text_field :appeal_message, class: 'form-control' %>
 
-      <%= f.label :body_size %>
-      <%= f.text_field :body_size, class: 'form-control' %>
 
       <%= f.label :hair_color %>
       <%= f.text_field :hair_color, class: 'form-control' %>
