ヘッダーのボタンからもPost投稿できるようにした。

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,11 +13,10 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <% if logged_in? %>
-      <ul class="nav navbar-nav navbar-center">
-            <li class="button1"><%= link_to "Styling Mode", root_path %></li>
-      </ul>
-    <% end %>
+      <div class="btn-group" role="group" aria-label="...">
+        <button type="button" class="btn btn-default"><%= link_to "Post", new_post_path %></button>
+        <button type="button" class="btn btn-default"><%= link_to "Styling", new_post_path %></button>
+      </div>
       <ul class="nav navbar-nav navbar-right">
 
         <li class="page-scroll">
