--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,17 +10,25 @@
   </head>
 
   <body>
-    <%= render 'layouts/header' %>
-    <div class="container-fluid">
-      <% flash.each do |message_type, message| %>
+    <div id="header">
+     <div class="container-fluid">
+
+        <%= render 'layouts/header' %>
+
+        <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
-      <% end %>
+        <% end %>
+
+      </div>
+    </div>
 
       <%= yield %>
 
+    <div id="footer">
+     <div class="container-fluid">
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
+     </div>
     </div>
   </body>
-
 </html>
