application.html.erbファイルを前回、コンテナとったりしたので、各ページの表示くずれた。よって、各ページにコンテナつけた。（まだ未のページもあり、気づいたら直す。）

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,31 +1,33 @@
 <% if logged_in? %>
-<div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <%= render 'shared/user_info' %>
-    </section>
-    <section class="stats">
-      <%= render 'shared/stats' %>
-    </section>
-    <section class="post_form">
-      <%= render 'shared/post_form' %>
-    </section>
-  </aside>
-  <div class="col-md-8">
-    <h3>Post Feed</h3>
-    <%= render 'shared/feed' %>
+<div class="container-fluid">
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="stats">
+        <%= render 'shared/stats' %>
+      </section>
+      <section class="post_form">
+        <%= render 'shared/post_form' %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3>Post Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
   </div>
 </div>
 
 <% else %>
-<header class="intro">
+<div class="intro">
   <div class="intro-body">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <h1 class="cover-heading">Make your style new.</h1>
           <p class="lead">Free, you can get advices from cool friends all over world.</p>
-
+          
           <div class="wrap">
             <button class="button1">
               <%= link_to "Sign Up for free", signup_path %>
@@ -39,5 +41,6 @@
           </div>
         </div>
       </div>
-    </header>
+    </div>
+  </div>
 <% end %>
