--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,14 +1,15 @@
-<% provide(:title, "Edit user") %>
-<h1>Update your profile</h1>
+<div class="container-fluid">
+  <% provide(:title, "Edit user") %>
+  <h1>Update your profile</h1>
 
-<div class="gravatar_edit">
-  <%= gravatar_for @user %>
-  <a href="http://gravatar.com/emails">change</a>
-</div>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user, html: { multipart: true }) do |f| %>
+  <div class="gravatar_edit">
+    <%= gravatar_for @user %>
+    <a href="http://gravatar.com/emails">change</a>
+  </div>
+  
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <%= form_for(@user, html: { multipart: true }) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
 
       <%= f.label :name %>
@@ -23,9 +24,10 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      
-      <%= f.submit "Save changes", class: "btn btn-primary" %>
 
-    <% end %>
+      <%= f.submit "Save changes", class: "btn btn-primary" %>
+      <% end %>
+    </div>
   </div>
+
 </div>
