--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,10 +1,5 @@
-<div class="card">
-  <div class="card-block">
-    <h4 class="card-title"><%= current_user.name %></h4>
-  </div>
-  <%= link_to gravatar_for(current_user, size: 100), current_user %>
-
-  <p>
-    <%= link_to "Edit profile", edit_user_path(current_user) %>
-  </p>
-</div>
+<h4 class="card-title"><%= current_user.name %></h4>
+<%= link_to gravatar_for(current_user, size: 100), current_user %>
+<button type="button" class="btn btn-default">
+  <%= link_to "Edit profile", edit_user_path(current_user) %>
+</button>
